--- a/kube-config.yaml
+++ b/kube-config.yaml
@@ -1,11 +1,23 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: go-api-svc
+spec:
+  selector:
+    app: go-api
+  ports:
+  - port: 8080
+    targetPort: 8080
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: go-api
 spec:
   selector:
     matchLabels:
       app: go-api
+  replicas: 2
   template:
     metadata:
       labels:
@@ -13,7 +25,7 @@ spec:
     spec:
       containers:
       - name: go-api
-        image: <Image>
+        image: go-api-design:0.0.1
         resources:
           limits:
             memory: "128Mi"
